@@ -602,11 +602,6 @@ div.vndetails table dd {
   margin-left: 90px;
 }
 
-.catlvl_0, .catlvl_1, .catlvl_2, .catlvl_3 { font-style: normal; }
-.catlvl_1 { color: $catlevel1$!important }
-.catlvl_2 { color: $catlevel2$!important }
-.catlvl_3 { color: $catlevel3$!important }
-
 div.vndetails td.relations dt {
   float: none;
   font-style: normal;
@@ -801,34 +796,6 @@ a.addnew {
 #advoptions span input {
   margin-right: 3px;
 }
-
-ul#catselect, ul#catselect ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-ul#catselect li {
-  display: block;
-  width: 170px;
-  float: left;
-  clear: none;
-  font-weight: bold;
-}
-ul#catselect li li {
-  display: list-item;
-  width: auto;
-  float: none;
-  clear: left;
-  font-weight: normal;
-  padding: 0 0 0 18px;
-  margin: 0;
-  cursor: pointer;
-  list-style-type: none;
-  background: url(/f/select.png) no-repeat;
-}
-ul#catselect li li.inc { background-position: 0px -16px; color: $statok$; }
-ul#catselect li li.exc { background-position: 0px -33px; color: $statnok$; }
-
 
 
 
