@@ -27,9 +27,6 @@ imglefttop   0
 imgrighttop  0
 
 // misc colors
-catlevel1    #444
-catlevel2    #777
-catlevel3    #999
 diffadd      #cfc
 diffdel      #fcc
 warnbg       #000
