@@ -30,9 +30,6 @@ imglefttop   bg.jpg
 imgrighttop  bgright.jpg
 
 // misc colors
-catlevel1    #240f21  // category levels
-catlevel2    #ffffff
-catlevel3    #dd0b48
 diffadd      #87705c  // background color of changes in the diff viewer
 diffdel      #374d77
 warnbg       #76a1cd  // background color of a warning box
