@@ -11,6 +11,7 @@
 	- Added OpenSearch plugin + autodetection
 	- Converted font size units to px in the css
 	- Added double-post prevention
+	- Converted old categories to tags and removed last traces of the category system
 
 2.5 - 2009-07-09
 	- Hide NSFW images in diff viewer (unless NSFW warnings are disabled)
